# sandwich-recipes

./: Cargo.toml
lib/application/: Cargo.toml
lib/application/src/: lib.rs
lib/application/src/tests/: test_utils.rs
lib/application/src/use_cases/: create_sandwich.rs  delete_one_sandwich.rs  find_all_sandwiches.rs  find_one_sandwich.rs  update_sandwich.rs
lib/domain/: Cargo.toml
lib/domain/src/: lib.rs
lib/domain/src/entities/: mod.rs  sandwich.rs
lib/domain/src/entities/value_objects/: sandwich_name.rs  sandwich_type.rs
lib/domain/src/tests/: test_utils.rs
lib/domain/src/use_cases/: create_sandwich.rs  find_all_sandwiches.rs  find_one_sandwich.rs  mod.rs  update_sandwich.rs
lib/domain/src/value_objects/: mod.rs  sandwich_id.rs  sandwich_ingredients.rs
lib/framework/: Cargo.toml
lib/framework/src/: lib.rs
lib/framework/src/driving/: mod.rs
lib/framework/src/driving/rest_handler/: errors.rs  helpers.rs  mod.rs  sandwiches.rs  validate.rs
lib/framework/src/driving/rest_handler/dtos/: create_sandwich_request.rs  mod.rs  sandwich_response.rs
