[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
application = { path = "../application" }
domain = { path = "../domain" }
serde = { version = "1.0.210", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
